Added repository cleanup
